--- a/package.json
+++ b/package.json
@@ -13,15 +13,18 @@
     "@react-three/fiber": "^8.16.8",
     "@types/three": "^0.165.0",
     "babel-plugin-react-compiler": "^0.0.0-experimental-938cd9a-20240601",
+    "byte-size": "^8.1.1",
     "dexie": "^4.0.7",
     "dexie-react-hooks": "^1.1.7",
     "eslint-plugin-react-compiler": "^0.0.0-experimental-51a85ea-20240601",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-dropzone": "^14.2.3",
     "react-router-dom": "^6.23.1",
     "three": "^0.165.0"
   },
   "devDependencies": {
+    "@types/byte-size": "^8.1.2",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
     "@typescript-eslint/eslint-plugin": "^7.2.0",
