--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-three/drei": "^9.106.0",
     "@react-three/fiber": "^8.16.8",
     "@types/three": "^0.165.0",
     "babel-plugin-react-compiler": "^0.0.0-experimental-938cd9a-20240601",
