--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-dropzone": "^14.2.3",
+    "react-icons": "^5.3.0",
     "react-router-dom": "^6.23.1",
-    "three": "^0.165.0"
+    "three": "^0.165.0",
+    "zustand": "^5.0.0"
   },
   "devDependencies": {
     "@types/byte-size": "^8.1.2",
