--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-dom": "^18.3.1",
     "react-dropzone": "^14.2.3",
     "react-icons": "^5.3.0",
+    "react-input-with-drag": "^1.1.6",
     "react-router-dom": "^6.23.1",
     "three": "^0.165.0",
     "zustand": "^5.0.0"
