--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-icons": "^5.3.0",
     "react-input-with-drag": "^1.1.6",
     "react-router-dom": "^6.23.1",
+    "react-toastify": "^11.0.3",
     "three": "^0.165.0",
     "zustand": "^4.5.2"
   },
