--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "dexie-react-hooks": "^1.1.7",
     "eslint-plugin-react-compiler": "^0.0.0-experimental-51a85ea-20240601",
     "react": "^18.3.1",
+    "react-arborist": "^3.4.0",
     "react-dom": "^18.3.1",
     "react-dropzone": "^14.2.3",
     "react-icons": "^5.3.0",
