--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "byte-size": "^8.1.1",
     "dexie": "^4.0.7",
     "dexie-react-hooks": "^1.1.7",
+    "earcut": "^3.0.1",
     "eslint-plugin-react-compiler": "^0.0.0-experimental-51a85ea-20240601",
     "react": "^18.3.1",
     "react-arborist": "^3.4.0",
@@ -32,6 +33,7 @@
   },
   "devDependencies": {
     "@types/byte-size": "^8.1.2",
+    "@types/earcut": "^3.0.0",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
     "@typescript-eslint/eslint-plugin": "^7.2.0",
