--- a/package.json
+++ b/package.json
@@ -14,13 +14,13 @@
     "@react-three/drei": "^9.106.0",
     "@react-three/fiber": "^8.16.8",
     "@types/three": "^0.165.0",
-    "babel-plugin-react-compiler": "^0.0.0-experimental-938cd9a-20240601",
     "byte-size": "^8.1.1",
     "dexie": "^4.0.7",
     "dexie-react-hooks": "^1.1.7",
     "earcut": "^3.0.1",
     "react": "^18.3.1",
     "react-arborist": "^3.4.0",
+    "react-compiler-runtime": "^19.0.0-beta-decd7b8-20250118",
     "react-dom": "^18.3.1",
     "react-dropzone": "^14.2.3",
     "react-icons": "^5.3.0",
@@ -41,6 +41,7 @@
     "@typescript-eslint/eslint-plugin": "^8.21.0",
     "@vitejs/plugin-react": "^4.2.1",
     "autoprefixer": "^10.4.19",
+    "babel-plugin-react-compiler": "^19.0.0-beta-decd7b8-20250118",
     "eslint": "^9.19.0",
     "eslint-plugin-react-compiler": "^19.0.0-beta-decd7b8-20250118",
     "eslint-plugin-react-hooks": "^5.1.0",
