--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "dexie": "^4.0.7",
     "dexie-react-hooks": "^1.1.7",
     "earcut": "^3.0.1",
+    "file-saver": "^2.0.5",
     "react": "^18.3.1",
     "react-arborist": "^3.4.0",
     "react-compiler-runtime": "^19.0.0-beta-decd7b8-20250118",
@@ -39,6 +40,7 @@
     "@eslint/js": "^9.19.0",
     "@types/byte-size": "^8.1.2",
     "@types/earcut": "^3.0.0",
+    "@types/file-saver": "^2.0.7",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
     "@typescript-eslint/eslint-plugin": "^8.21.0",
