--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "lint": "eslint **/*.{ts,tsx} --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "cloc": "cloc src/"
   },
   "dependencies": {
     "@designbyadrian/react-interactive-input": "^2.0.3",
