--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "earcut": "^3.0.1",
     "file-saver": "^2.0.5",
     "jotai": "^2.11.3",
+    "jszip": "^3.10.1",
     "react": "^18.3.1",
     "react-arborist": "^3.4.0",
     "react-compiler-runtime": "^19.0.0-beta-decd7b8-20250118",
